# talos_horizon

./: CMakeLists.txt  package.xml
config/: cogimon_config.yaml  cogimon_straight_config.yaml  g1_config.yaml  g1_controller_config.yaml  talos.rviz  talos_config.yaml  talos_controller_config.yaml
include/: JointStatePublisher.h  RobotInterfaceUnitree.h  controller.h  mpc_joint_handler.h  resampler.h
launch/: cogimon_controller.launch  cogimon_simulator.launch  g1_controller.launch  g1_sim.launch  joint_state_publisher.launch  talos_controller.launch  talos_simulator.launch
msg/: WBTrajectory.msg
python/: cogimon_receding_horizon.py  cogimon_straight.py  g1_experimental.py  g1_receding_horizon.py  joy_commands.py  talos_receding_horizon.py  test_robot_interface.py  urdf_augment.py
rviz/: g1.rviz  g1_joints.rviz
scripts/: talos_basic.yaml
scripts/hal/: talos_gz.yaml
src/: JointStatePublisher.cpp  RobotInterfaceUnitree.cpp  controller.cpp  controller_node.cpp  joint_state_publisher_node.cpp  mpc_joint_handler.cpp  resampler.cpp
srdf/: g1_29dof.srdf
urdf/: g1_29dof.urdf  talos_fixed_base.urdf
